kube_develop/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-service
  name: frontend-service
  namespace: s652-develop
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend-service
  type: ClusterIP
