kube_develop/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-develop"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: frontend-service-ingress
  namespace: s652-develop
spec:
  rules:
    - host: develop.delegate-market.nl
      http:
        paths:
          - backend:
              serviceName: frontend-service
              servicePort: 80
  tls:
    - hosts:
        - develop.delegate-market.nl
      secretName: frontend-service-tls
status:
  loadBalancer:
    ingress:
      - {}
